# coloring_real_world_graphs_randomly_in_the_local_model

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  analysis_thesis.ipynb  coloringgirgs.cpp  data_generation.py  install.sh  main.cpp
data/raw/: deltafactor90-95.csv  deltafactor95-99.csv  girg_avdg=10_dim=2D_2_c_variation.csv  girgs_avdeg=10_dim=2D.csv  girgs_avdeg=10_dim=2D_3_c_variation.csv  girgs_tries_for_successfull_coloring.csv  multiline_plot_data_1.csv  multiline_plot_data_2.csv  new_data_graph_size_comparison(unfinished).csv  rand_avdg=10_dem=2D_1.csv  rand_avdg=10_dem=2D_2.csv  rand_avdg=10_dim=2D_3_c_variation.csv
data/tables/: deltafactor1000-5000.xlsx  girg_coloring_success_prob_across_v.xlsx
data/waste/: DELETE.csv
